--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -5402,11 +5402,11 @@
     {
         "date": "2018-01-01",
         "gameType": "R",
-        "resultType": "TBD",
+        "resultType": "OT",
         "homeTeam": "Buffalo Sabres",
         "awayTeam": "New York Rangers",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 2,
+        "awayGoals": 3
     },
     {
         "date": "2018-01-02",
